* stat_contour bump up default number of contours
* stat_density2d: make number of grid points used for density estimation 
  user controllable (implements #9)
* geom_path: linejoin, lineend and linemitre are now user controllable 
  (implements #24)
* facet_wrap now maintains original order of data
* geom_bin now allows you to set whether bins used intervals of the form 
  (a, b] or [a, b) with the "right" parameter (implements #20)
* scales: all scales check that breaks are supplied if labels are, and 
  that breaks and labels are the same length (implements #40)
* scales: if breaks are a named vector, the names will be used as labels
  (thanks to suggestion by David Kahle)
* scales: all scales now have legend parameter, which defaults to TRUE.  
  Setting to false will prevent that scale from contributing to the legends.
  (Implements #27)
* aesthetics: when _setting_ an aesthetic, you may only set it to a single 
  value.  This was always a good idea, but now it is enforced with an 
  informative error message.
* xlim, ylim: fix bug when setting limits of discrete scales
* labels are now stored in the options, rather than in individual scales.  
  This fixes a long standing bug where it was not easy to set the label for
  computed variable, such as the y axis on a histogram. Additionally, it means
  default scales are only added to the plot until just prior to plotting, 
  instead of the previous behaviour where scales where added as layers were
  added - this could cause problems if you layer modified the plot.
  (Implements #28)
* scale_shape_discrete, scale_size_continuous, scale_alpha and
  scale_linetype_discrete added to scales to match naming convention of all
  other scales (Fixes #47)
* scale_colour_gradient, scale_colour_gradient2 & scale_colour_gradientn now
  have formatter argument to match scale_continuous
* legends will only merge if both the title and all labels are the same.
  (Fixes #16)